# MidiMaker

./: .gitignore  CMakeLists.txt  Chord.cpp  Chord.hpp  Makefile  Note.cpp  Note.hpp  SeqSegment.cpp  SeqSegment.hpp  Sequence.cpp  Sequence.hpp  SequenceList.cpp  SequenceList.hpp  SymbolTable.cpp  SymbolTable.hpp  license.txt  main.cpp  music.l  music.txt  music.ypp  readme.md
